Normalize column attribute metadata
